chore: initial push

--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>TranscriptAuditor</title>
+  <meta name="google" content="notranslate">
+  <meta http-equiv="Content-Language" content="en">  
+  <title>Transcript Auditor</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="favicon.png">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600|Roboto+Slab:400,700" rel="stylesheet">
+
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+    <div class="loading">
+      <i class="fa fa-spinner fa-pulse text-center"></i> Loading...
+    </div>    
+  </app-root>
 </body>
 </html>
