--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,19 @@
 <!doctype html>
 <html lang="en">
+
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-88293064-6"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'UA-88293064-6');
+  </script>
+
   <meta charset="utf-8">
   <meta name="google" content="notranslate">
-  <meta http-equiv="Content-Language" content="en">  
+  <meta http-equiv="Content-Language" content="en">
   <title>Transcript Auditor</title>
   <base href="/">
 
@@ -12,11 +22,13 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600|Roboto+Slab:400,700" rel="stylesheet">
 
 </head>
+
 <body>
   <app-root>
     <div class="loading">
       <i class="fa fa-spinner fa-pulse text-center"></i> Loading...
-    </div>    
+    </div>
   </app-root>
 </body>
+
 </html>
