feat: improve message event display

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,19 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="favicon.png">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600|Roboto+Slab:400,700" rel="stylesheet">
+  <script src="https://use.fontawesome.com/083928d2aa.js"></script>
+  <style>
+    body {
+      background-color: #e9ecef;
+    }    
+    .loading {
+      font-size: 25px;
+      position: fixed;
+      display: block;
+      left: 45%;
+      top: 35%;
+    }
+  </style>
 
 </head>
 
