refactor: general updates

--- a/src/index.html
+++ b/src/index.html
@@ -14,16 +14,13 @@
   <meta charset="utf-8">
   <meta name="google" content="notranslate">
   <meta http-equiv="Content-Language" content="en">
-  <title>Transcript Auditor</title>
+  <title>Conversation Analyzer</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="favicon.png">
   <script src="https://use.fontawesome.com/083928d2aa.js"></script>
-  <style>
-    body {
-      background-color: #e9ecef;
-    }    
+  <style>   
     .loading {
       font-size: 25px;
       position: fixed;
